testdata/invalid/semantic/invalid_reference.pact
// Invalid relation reference
component Order {
	id: string

	relation NonExistentService: uses
}
